--- a/src/View/home.html.twig
+++ b/src/View/home.html.twig
@@ -1,3 +1,19 @@
+{# home.html.twig #}
+
+
+{% extends 'layout.html.twig' %}
+{% block title %}
+    {{ parent() }} - Accueil !
+{% endblock %}
+
+
+
+
+
+
+
+
+{# 
 <!doctype html>
 <html lang="fr">
 <head>
@@ -12,3 +28,4 @@
     <h1>Hello {{ name }} !</h1>
 </body>
 </html>
+#}
